Fix proposal text not showing until the end

--- a/app/style/Governance.less
+++ b/app/style/Governance.less
@@ -363,8 +363,9 @@
 }
 
 .proposal-details-text {
-  overflow: auto;
+  min-height:100%;
   margin-top: 20px;
+  margin-bottom: 80px;
   p {
     word-wrap: break-word;
   }
